Combined pie charts v0

--- a/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle.css
@@ -247,6 +247,14 @@ body {
 	width:65%;
 	float:right;
 }
+#exec_pie_left {
+    width:50%;
+    float:left;
+}
+#exec_pie_right {
+    width:50%;
+    float:right;
+}
 #footer {
 	background-color:#2A579F;
 	height:100%;
