--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Combined/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Combined/Index.cshtml
@@ -101,7 +101,7 @@
                 <input type="date" id="startdate" name="startdate" value="@ViewBag.StartDate"/>
                 <label for="enddate">To: </label>
                 <input type="date" id="enddate" name="enddate" value="@ViewBag.EndDate"/>
-                <button type="button" onclick="ChangeStats()">Click Me!</button>
+                <button type="button" onclick="ChangeStats()">Go!</button>
             </div>
             <div id="exec_leftbar">
                 <div class="heading"><p>Campaign Metrics</p></div>
