Report Components- weekly

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/Components.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/Components.cshtml
@@ -9,7 +9,7 @@ SearchProfile: @Model.SearchProfileName<br />
 Start Day of Week: @((DayOfWeek)Model.StartDayOfWeek)<br />
 <br />
 Stats:<br />
-@Ajax.ActionLink("Weekly", "Weekly", "SearchStats", new { spId = Model.SearchProfileId }, ajaxOpts_Profiles)
+@Html.ActionLink("Weekly", "Weekly", "SearchStats", new { spId = Model.SearchProfileId }, new { target = "_blank" })
 
 <br /><br />
 Back to:
