--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchStats/Weekly.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchStats/Weekly.cshtml
@@ -1,4 +1,106 @@
 ﻿@model ClientPortal.Web.Areas.Admin.Models.SearchStatsVM
+@{
+    var sp = Model.SearchProfile;
+    int numCols = Model.ColumnConfigs.Count();
+}
 
-@Model.SearchProfile.SearchProfileId -
-@Model.SearchProfile.SearchProfileName
+@sp.SearchProfileId -
+@sp.SearchProfileName
+
+<div>
+    <div id="spreadsheet" style="width:950px"></div>
+</div>
+
+@section scripts {
+<script>
+    $(document).ready(function () {
+        var datasource = CreateDataSource();
+        SetupSpreadsheet(datasource);
+    });
+
+    function CreateDataSource() {
+        var datasource = new kendo.data.DataSource({
+            transport: {
+                read: {
+                    url: '@Url.Action("WeeklyData")',
+                    data: {
+                        spId: @sp.SearchProfileId
+                    },
+                    type: 'post',
+                    dataType: 'json'
+                }
+            },
+            schema: {
+                model: {
+                    id: 'Id',
+                    fields: {
+                        @foreach (var config in Model.ColumnConfigs)
+                        {
+                            <text>@config.PropName: { type: '@config.KendoType' },</text>
+                        }
+                    }
+                }
+            }
+        });
+        return datasource;
+    }
+
+    function SetupSpreadsheet(datasource) {
+        DoSpreadsheetConfig();
+
+        var spreadsheet = $('#spreadsheet').data('kendoSpreadsheet');
+        var sheet = spreadsheet.activeSheet();
+
+        // Setup Columns
+        sheet.setDataSource(datasource, [@Html.Raw(string.Join(",", Model.ColumnConfigs.Select(c => "'" + c.PropName + "'")))]);
+        sheet.setDataSource(datasource, [
+            @foreach (var config in Model.ColumnConfigs)
+            {
+                if (config.DisplayName == null) {
+                    <text>{ field: "@config.PropName" },</text>
+                } else {
+                    <text>{ field: "@config.PropName", title: "@config.DisplayName" },</text>
+                }
+            }
+        ]);
+        @foreach (var config in Model.ColumnConfigs)
+        {
+            if (config.Format != null)
+            {
+                <text>sheet.range('@config.Letter:@config.Letter').format('@config.Format');</text>
+            }
+        }
+    }
+
+    function DoSpreadsheetConfig() {
+        $('#spreadsheet').kendoSpreadsheet({
+            columns: @numCols,
+            rows: 100,
+            //toolbar: false,
+            //sheetsbar: false,
+            sheets: [{
+                name: 'Weekly',
+                //dataSource: datasource,
+                frozenRows: 1,
+                columns: [
+                    @for (int i = 0; i < numCols; i++)
+                    {<text>{ width: 100 },</text>}
+                ],
+                rows: [{ // define header row
+                    cells: [
+                    @for (int i = 0; i < numCols; i++)
+                    {<text>
+                        {
+                            bold: "true",
+                            background: "#9c27b0",
+                            textAlign: "center",
+                            color: "white"
+                        },
+                    </text>}
+                    ]
+                }],
+            }]
+        });
+    }
+</script>
+}
