--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Layout2016.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_Layout2016.cshtml
@@ -8,13 +8,13 @@
     <title>@ViewBag.Title</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="http://kendo.cdn.telerik.com/2016.3.914/styles/kendo.common-bootstrap.min.css" rel="stylesheet" />
-    <link href="http://kendo.cdn.telerik.com/2016.3.914/styles/kendo.bootstrap.min.css" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://kendo.cdn.telerik.com/2016.3.914/styles/kendo.common-bootstrap.min.css" rel="stylesheet" />
+    <link href="https://kendo.cdn.telerik.com/2016.3.914/styles/kendo.bootstrap.min.css" rel="stylesheet" />
 @* kendo.dataviz.min.css / kendo.dataviz.bootstrap.min.css *@
 
-    <script src="http://kendo.cdn.telerik.com/2016.3.914/js/jquery.min.js"></script>
-    <script src="http://kendo.cdn.telerik.com/2016.3.914/js/kendo.all.min.js"></script>
+    <script src="https://kendo.cdn.telerik.com/2016.3.914/js/jquery.min.js"></script>
+    <script src="https://kendo.cdn.telerik.com/2016.3.914/js/kendo.all.min.js"></script>
 @*    kendo.timezones? *@
 <style type="text/css" media="screen">
 body {
