--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
@@ -10,13 +10,13 @@
 
     <link href="~/Content/DA.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href="http://kendo.cdn.telerik.com/2015.3.930/styles/kendo.common-bootstrap.min.css" rel="stylesheet" />
-    <link href="http://kendo.cdn.telerik.com/2015.3.930/styles/kendo.bootstrap.min.css" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://kendo.cdn.telerik.com/2015.3.930/styles/kendo.common-bootstrap.min.css" rel="stylesheet" />
+    <link href="https://kendo.cdn.telerik.com/2015.3.930/styles/kendo.bootstrap.min.css" rel="stylesheet" />
 @* kendo.dataviz.min.css / kendo.dataviz.bootstrap.min.css *@
 
-    <script src="http://kendo.cdn.telerik.com/2015.3.930/js/jquery.min.js"></script>
-    <script src="http://kendo.cdn.telerik.com/2015.3.930/js/kendo.all.min.js"></script>
+    <script src="https://kendo.cdn.telerik.com/2015.3.930/js/jquery.min.js"></script>
+    <script src="https://kendo.cdn.telerik.com/2015.3.930/js/kendo.all.min.js"></script>
 @*    kendo.timezones? *@
     @if (ViewBag.UseTableCSS != null && ViewBag.UseTableCSS) {
 <style type="text/css" media="screen">
