--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/Components.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/Components.cshtml
@@ -7,10 +7,25 @@
 
 SearchProfile: @Model.SearchProfileName<br />
 <br />
-Stats:
-@Html.ActionLink("Weekly", "Weekly", "SearchStats", new { spId = Model.SearchProfileId }, new { target = "_blank" }) |
-@Html.ActionLink("Monthly", "Monthly", "SearchStats", new { spId = Model.SearchProfileId }, new { target = "_blank" })
+Conversion Type Stats:<br />
+@using (Html.BeginForm("WeeklyMonthly", "SearchStats", FormMethod.Get, new { target = "_blank" }))
+{
+    @Html.Hidden("spid", Model.SearchProfileId)
+    <table>
+        <tr>
+            <td>Monthly:</td>
+            <td><input name="monthlyNotWeekly" type="checkbox" value="true" /> (leave unchecked for weekly)</td>
+        </tr>
+        <tr>
+            <td>NumRows:</td>
+            <td><input type="text" name="numrows" value="16" style="width:100px" /></td>
+        </tr>
+        <tr>
+            <td colspan="2"><input type="submit" value="Generate" /></td>
+        </tr>
+    </table>
+}
 
-<br /><br />
+<br />
 Back to:
 @Ajax.ActionLink("Profiles", "SearchProfiles", "SearchAdmin", ajaxOpts_Profiles)
