--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/EditProfile.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/EditProfile.cshtml
@@ -45,6 +45,10 @@
                     <td>@Html.EditorFor(m => m.ShowCassConvs) (click-assisted conversions - report only)</td>
                 </tr>
                 <tr>
+                    <td>@Html.LabelFor(m => m.UseAllConvs)</td>
+                    <td>@Html.DisplayFor(m => m.UseAllConvs) (contact KS to change)</td>
+                </tr>
+                <tr>
                     <td>@Html.LabelFor(m => m.UseConvertedClicks)</td>
                     <td>@Html.DisplayFor(m => m.UseConvertedClicks) (contact KS to change)</td>
                 </tr>
