--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/CreateSearchProfile.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/CreateSearchProfile.cshtml
@@ -31,6 +31,14 @@
                 <td>@Html.EditorFor(m => m.ShowViewThrus) (view-through conversions)</td>
             </tr>
             <tr>
+                <td>@Html.LabelFor(m => m.ShowCassConvs)</td>
+                <td>@Html.EditorFor(m => m.ShowCassConvs) (click-assisted conversions - report only)</td>
+            </tr>
+            <tr>
+                <td>@Html.LabelFor(m => m.UseAllConvs)</td>
+                <td>@Html.EditorFor(m => m.UseAllConvs) (for AdWords / conversion type stats)</td>
+            </tr>
+            <tr>
                 <td>@Html.LabelFor(m => m.UseConvertedClicks)</td>
                 <td>@Html.EditorFor(m => m.UseConvertedClicks) (when pulling from AdWords)</td>
             </tr>
