--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchStats/Generic.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchStats/Generic.cshtml
@@ -27,7 +27,8 @@
                     url: '@Url.Action(Model.StatsType + "Data")',
                     data: {
                         spId: @sp.SearchProfileId,
-                        numRows: @Model.NumRows
+                        numPeriods: @Model.NumPeriods,
+                        groupBySearchAccount: @(Model.GroupBySearchAccount ? "true" : "false")
                     },
                     type: 'post',
                     dataType: 'json'
