Report Components - end date

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/Components.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/Components.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ClientPortal.Data.Contexts.SearchProfile
 @{
     var ajaxOpts_Profiles = RazorHelpers.GetAjaxOptions("searchProfilesTab", "navSearchProfiles");
+    var endDate = Model.GetLast_WeekEndDate();
     var statsTypes = new[] { "Overall", "Campaign" };
     var intervals = new[] { "Weekly", "Monthly" };
     bool groupBySearchAccount = Model.HasChannelWithMultipleSearchAccounts();
@@ -9,12 +10,17 @@
 <h3>Report Components</h3>
 
 SearchProfile: @Model.SearchProfileName<br />
+Start Day of Week: @((DayOfWeek)Model.StartDayOfWeek)<br />
 <br />
 Conversion Type Stats:<br />
 @using (Html.BeginForm("Generic", "SearchStats", FormMethod.Get, new { target = "_blank" }))
 {
     @Html.Hidden("spid", Model.SearchProfileId)
     <table>
+        <tr>
+            <td>@Html.Label("Stats End-Date:")</td>
+            <td><input id="spreadsheet_enddate" type="text" name="enddate" value="@endDate.ToShortDateString()" /></td>
+        </tr>
         <tr>
             <td>@Html.Label("StatsType:")</td>
             <td>@Html.DropDownList("statsType", new SelectList(statsTypes), new { style = "margin: .2rem 0" })</td>
@@ -41,3 +47,9 @@ Conversion Type Stats:<br />
 Back to:
 @Ajax.ActionLink("Profiles", "SearchProfiles", "SearchAdmin", ajaxOpts_Profiles) |
 @Ajax.ActionLink("Generate Spreadsheet", "GenerateSpreadsheet", new { spId = Model.SearchProfileId }, ajaxOpts_Profiles)
+
+<script>
+    $(function () {
+        $('#spreadsheet_enddate').kendoDatePicker({ footer: ' ' });
+    });
+</script>
