--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchStats/Generic.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchStats/Generic.cshtml
@@ -27,6 +27,9 @@
                     url: '@Url.Action(Model.StatsType + "Data")',
                     data: {
                         spId: @sp.SearchProfileId,
+                        @if (Model.EndDate.HasValue) {
+                            @Html.Raw("endDate: '" + Model.EndDate.Value.ToShortDateString() + "',")
+                        }
                         numPeriods: @Model.NumPeriods,
                         groupBySearchAccount: @(Model.GroupBySearchAccount ? "true" : "false")
                     },
