combined menu fixup

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Search/_ViewStart.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Search/_ViewStart.cshtml
@@ -1,4 +1,4 @@
 ﻿@{
-    ViewContext.Controller.ViewBag.HasProg = false;
+    //ViewContext.Controller.ViewBag.HasProg = false;
     Layout = "~/Views/Shared/_Portal2016.cshtml";
 }
