--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/_ViewStart.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/_ViewStart.cshtml
@@ -1,3 +1,4 @@
 ﻿@{
-    Layout = "~/Areas/Prog/Views/Shared/_Layout.cshtml";
+    //Layout = "~/Areas/Prog/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Portal2016.cshtml";
 }
