--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/RevTrack/Views/Dashboard/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/RevTrack/Views/Dashboard/Index.cshtml
@@ -3,11 +3,18 @@
 <h2>Dashboard</h2>
 
 <table>
+<tr>
+    <th>Client</th>
+    <th>Revenue</th>
+    <th>&nbsp;&nbsp;&nbsp;</th>
+    <th>Cost</th>
+</tr>
 @foreach (var stat in Model.ABStats)
 {
 <tr>
     <td>@stat.Client</td>
     <td>@stat.Rev</td>
+    <td></td>
     <td>@stat.Cost</td>
 </tr>
 }
