--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/RevTrack/Views/Dashboard/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/RevTrack/Views/Dashboard/Index.cshtml
@@ -5,7 +5,10 @@
 <table>
 <tr>
     <th>Client</th>
+    <th>StartingBal</th>
     <th>Revenue</th>
+    <th>CurrentBal</th>
+    <th>CreditLimit</th>
     <th>&nbsp;&nbsp;&nbsp;</th>
     <th>Cost</th>
 </tr>
@@ -13,9 +16,13 @@
 {
 <tr>
     <td>@stat.Client</td>
+    <td>@stat.StartBal</td>
     <td>@stat.Rev</td>
+    <td>@stat.CurrBal</td>
+    <td>@stat.CredLim</td>
     <td></td>
     <td>@stat.Cost</td>
+    <td>@Html.ActionLink("edit", "EditClientStat", new { id = stat.Id, sb = stat.StartBal, cl = stat.CredLim })</td>
 </tr>
 }
 </table>
