--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/RevTrack/Views/Dashboard/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/RevTrack/Views/Dashboard/Index.cshtml
@@ -5,24 +5,26 @@
 <table>
 <tr>
     <th>Client</th>
-    <th>StartingBal</th>
     <th>Revenue</th>
-    <th>CurrentBal</th>
+    <th>Cost</th>
+    <th>Margin</th>
     <th>CreditLimit</th>
     <th>&nbsp;&nbsp;&nbsp;</th>
-    <th>Cost</th>
+    <th>StartingBal</th>
+    <th>CurrentBal</th>
 </tr>
 @foreach (var stat in Model.ABStats)
 {
 <tr>
     <td>@stat.Client</td>
-    <td>@stat.StartBal</td>
     <td>@stat.Rev</td>
-    <td>@stat.CurrBal</td>
+    <td>@stat.Cost</td>
+    <td>@stat.Margin</td>
     <td>@stat.CredLim</td>
     <td></td>
-    <td>@stat.Cost</td>
-    <td>@Html.ActionLink("edit", "EditClientStat", new { id = stat.Id, sb = stat.StartBal, cl = stat.CredLim })</td>
+    <td>@stat.StartBal</td>
+    <td>@stat.CurrBal</td>
+    <td>@Html.ActionLink("editlink", "EditClientStat", new { id = stat.Id, sb = stat.StartBal, cl = stat.CredLim })</td>
 </tr>
 }
 </table>
