--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/RevTrack/Views/Dashboard/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/RevTrack/Views/Dashboard/Index.cshtml
@@ -5,26 +5,34 @@
 <table>
 <tr>
     <th>Client</th>
+    <th>Budget</th>
     <th>Revenue</th>
     <th>Cost</th>
     <th>Margin</th>
-    <th>CreditLimit</th>
+    <th>Budget vs Actual</th>
+    <th>%Reached</th>
+    <th>ExtCredit</th>
+    <th>IntCredit</th>
     <th>&nbsp;&nbsp;&nbsp;</th>
     <th>StartingBal</th>
-    <th>CurrentBal</th>
+    <th>OpenBal</th>
 </tr>
 @foreach (var stat in Model.ABStats)
 {
 <tr>
     <td>@stat.Client</td>
+    <td>@stat.Budget</td>
     <td>@stat.Rev</td>
     <td>@stat.Cost</td>
     <td>@stat.Margin</td>
-    <td>@stat.CredLim</td>
+    <td>@stat.OverBudget</td>
+    <td>@stat.FractionBudget.ToString("P2")</td>
+    <td>@stat.ExtCred</td>
+    <td>@stat.IntCred</td>
     <td></td>
     <td>@stat.StartBal</td>
     <td>@stat.CurrBal</td>
-    <td>@Html.ActionLink("editlink", "EditClientStat", new { id = stat.Id, sb = stat.StartBal, cl = stat.CredLim })</td>
+    <td>@Html.ActionLink("editlink", "EditClientStat", new { id = stat.Id, sb = stat.StartBal, ec = stat.ExtCred, ic = stat.IntCred })</td>
 </tr>
 }
 </table>
